--- a/k8s/rsvp.yaml
+++ b/k8s/rsvp.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: rsvp-app
-        image: nkhare/rsvpapp
+        image: kishorevj/rsvpapp
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
